# Rust_API_Test_AXUM_DIESEL_DOCKER

./: .dockerignore  .env.docker.api.example  .env.docker.example  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.http/: base.http  players.http  teams.http  users.http
docker/: .env.example  docker-compose.yaml
migrations/2024-01-06-105408_create_users_table/: up.sql
migrations/2024-01-06-105501_create_teams_table/: up.sql
migrations/2024-01-06-105547_link_users_teams/: down.sql  up.sql
migrations/2024-01-06-201250_set_user_unique_nickname/: down.sql  up.sql
migrations/2024-01-07-112338_create_tables/: up.sql
migrations/2024-01-07-113442_create_default_team/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: environment.rs
src/controllers/: mod.rs  players_controller.rs  teams_controller.rs  users_controller.rs
src/handlers/: database_error_handler.rs  mod.rs
src/models/: mod.rs  player.rs  team.rs  user.rs
src/providers/: database.rs  migrations.rs  mod.rs
src/repositories/: mod.rs  player_repo.rs  repo_model.rs  team_repo.rs  user_repo.rs
src/routers/: mod.rs  players_router.rs  teams_router.rs
