[package]
name = "api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
colored = "2.1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
